--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#2a296e"
-backgroundColor="#9391d6"
-secondaryBackgroundColor="#fef5fe"
-textColor="#030302"
+primaryColor="#2f3c44"
+backgroundColor="#bbc8d0"
+secondaryBackgroundColor="#f5f9eb"
+textColor="#302311"
