--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#2f3c44"
-backgroundColor="#bbc8d0"
-secondaryBackgroundColor="#f5f9eb"
-textColor="#302311"
+primaryColor="#cfbcbf"
+backgroundColor="#433033"
+secondaryBackgroundColor="#130817"
+textColor="#fffcea"
