--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#cfbcbf"
-backgroundColor="#433033"
-secondaryBackgroundColor="#130817"
-textColor="#fffcea"
+primaryColor="#201f21"
+backgroundColor="#f6f6f7"
+secondaryBackgroundColor="#82c5bf"
+textColor="#3c332b"
